# podclean

./: .env.example  .gitignore  README.md  pyproject.toml  test_mlx.py
podclean/: __init__.py  cli.py  config.py  detector.py  fetcher.py  models.py  processor.py  transcriber.py
