[project]
name = "podclean"
version = "0.1.0"
description = "Automatically detect and remove spoken ads from podcast episodes"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mlx-whisper>=0.4.0",
    "pydub>=0.25.1",
    "feedparser>=6.0",
    "requests>=2.31",
    "click>=8.1",
    "google-genai>=1.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "audioop-lts>=0.2.1",
]

[project.scripts]
podclean = "podclean.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["podclean*"]
